kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monuv-api-service
  namespace: monuv
spec:
  selector:
    app: monuv-api
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
